--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -8,7 +8,7 @@
   --home-links-background: #815ca7;
   --button-background: #ffa500;
   --button-border: #ffa50060;
-  --title-color: #fff;
+  --white-color: #fff;
   --font-color: #CEB2EA;
   --home-title-color: #d87d06;
 
@@ -59,17 +59,16 @@ html {
 body {
   background: var(--background-primary);
   color: var(--font-color);
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   line-height: 1.8;
   overflow-x: hidden;
 }
 
 
-@media (min-width: 992px) {
+@media (min-width: 425px) {
 
-  .container {
-    max-width: 1050px;
-    margin: 0 auto;
+  body {
+    font-size: 1.8rem;
   }
 
 }
