--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,7 +1,14 @@
 /* Home */
 
-.home {
+.home .container{
   padding-top: 105px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home-banner img {
+  width: 80%;
 }
 
 .home-title {
@@ -17,6 +24,7 @@
 
 .home-links ul {
   display: flex;
+  flex-direction: column;
   gap: 10px;
   padding: 20px 0;
 }
@@ -27,20 +35,22 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  color: white;
 }
 
 .home-links ul li a ion-icon {
-  font-size: 30px; 
-  color: white;  
+  font-size: 1.2em; 
+  color: var(--white-color);  
+}
+
+
+@media (min-width: 425px) {
+  .home-links ul {
+    flex-direction: row;
+  }
 }
 
 
 @media (min-width: 768px) {
-
-  .home {
-    display: flex;
-  }
 
   .home .container {
     display: flex;
