--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,14 +5,15 @@ header {
   padding-block: 15px;
   width: 100%;
   background: var(--background-secondary);
-  height: 120px;
+  height: 100px;
   overflow: hidden;
   box-shadow: 0 -5px 10px var(--font-color);
+  z-index: 4;
 }
 
-.header .nav-active {
-  height: 335px;
-  transition-duration: 0.3s;
+.header.nav-active {
+  height: 300px;
+  transition-duration: 0.35s;
 }
 
 header > .container {
@@ -67,25 +68,18 @@ header > .container {
   color: var(--green);
 }
 
-
-@media (min-width: 768px) {
-
-  .navbar-list {
-    display: flex;
-    align-items: center;
-    gap: 30px;
-  }
-
+.navbar-link:hover {
+  opacity: 0.6;
 }
 
-@media (min-width: 992px) {
+
+@media (min-width: 768px) {
 
   .nav-toggle-btn {
     display: none;
   }
 
   .header, .header.nav-active {
-    background-color: transparent;
     height: unset;
   }
 
@@ -100,6 +94,7 @@ header > .container {
   .navbar-list {
     display: flex;
     align-items: center;
+    gap: 30px;
   }
   
 }
