--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,7 +1,7 @@
 /* Home */
 
 .home .container{
-  padding-top: 105px;
+  /* padding-top: 105px; */
   display: flex;
   flex-direction: column;
   align-items: center;
