--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -19,7 +19,7 @@
 
 .home-title strong {
   font-size: 3.5rem;
-  color: var(--home-title-color);
+  color: var(--color);
 }
 
 .home-links ul {
@@ -30,8 +30,8 @@
 }
 
 .home-links ul li a{
-  background-color: var(--home-links-background);
-  border: var(--home-links-background);
+  background-color: var(--color);
+  border: none;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -39,7 +39,7 @@
 
 .home-links ul li a ion-icon {
   font-size: 1.2em; 
-  color: var(--white-color);  
+  color: var(--font-color);  
 }
 
 
