--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  color: var(--white-color);
+  color: var(--font-color);
 }
 
 .project-card {
-  background-color: var(--home-title-color);
+  background-color: var(--color-secondary);
   border-radius: 10px;
   box-sizing: border-box;
   box-shadow: 0 0 3px 1px var(--font-color);
