--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -6,8 +6,8 @@
   --background-secondary: #2D2F31;
 
   --color: #f15a94;
-  --color-secondary: #cd5c5c;
-  --font-color: #E3E3E3;
+  --color-secondary: #f15a94;
+  --font-color: #e3e3e3;
 
   --section-padding: 60px;
 }
@@ -18,10 +18,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* color: #770635; */
+  
+  transition: background-color 1s;
 }
 
-span, strong {
+span, strong, button, input, a {
   display: block;
 }
 
@@ -68,7 +69,7 @@ body {
 @media (min-width: 425px) {
 
   body {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
   }
 
 }
