--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -23,8 +23,8 @@
 
 .contact-input {
   background-color: var(--background-primary);
-  color: white;
-  border-radius: 20px;
+  color: var(--font-color);
+  border-radius: 8px;
   padding: 15px 25px;
   font-size: 1.5rem;
   margin-bottom: 15px;
