--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,4 @@
+
 /* Header */
 
 header {
@@ -7,15 +8,15 @@ header {
   height: 80px;
   overflow: hidden;
   box-shadow: 0 -5px 10px var(--font-color);
-  z-index: 4;
 }
 
-.header.nav-active {
+header.show {
   height: 300px;
   transition-duration: 0.35s;
 }
 
-header > .container {
+header .container {
+  height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -27,73 +28,151 @@ header > .container {
 }
 
 .logo img {
-  width: 120px;
+  width: 100px
 }
 
-.nav-toggle-btn {
-  background-color: var(--background-secondary);
-  border: none;
+header > .container > div {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  flex-direction: row-reverse;
 }
 
-.nav-toggle-btn .close-icon, .nav-toggle-btn.active .menu-icon {
-  display: none;
+.menu-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 24px;
+  height: 18px;
+  cursor: pointer;
+  position: relative;
 }
 
-.nav-toggle-btn.active .close-icon, .nav-toggle-btn .menu-icon {
+.menu-icon span {
   display: block;
+  width: 100%;
+  height: 3px;
+  background-color: var(--font-color);
+  border-radius: 3px;
+  transition: all 0.3s ease-in-out;
 }
 
-.navbar {
+.menu-icon.open span:nth-child(1) {
+  transform: translateY(7.5px) rotate(45deg);
+}
+
+.menu-icon.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.menu-icon.open span:nth-child(3) {
+  transform: translateY(-7.5px) rotate(-45deg);
+}
+
+nav {
+  display: none;
+  flex-direction: column;
+  padding: 0 1rem;
+  font-size: 1.8rem;
+  position: relative;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: column;
+}
+
+nav ul li {
+  margin: 0.5rem 0;
+  border-bottom: 1px solid var(--background-primary);
+}
+
+.menu-icon.open {
+  z-index: 1;
+}
+
+.show nav {
+  display: block;
   position: absolute;
-  top: 100px;
+  padding: 0 20px;
+  height: auto;
+  top: 80px;
   left: 0;
   width: 100%;
-  padding: 0 20px;
-  visibility: hidden;
-  opacity: 0;
-  transition: 0.3s;
+  z-index: 1;
 }
 
-.header.nav-active .navbar {
-  visibility: visible;
-  opacity: 1;
+/* Switcher */
+
+
+.switcher {
+
+  background-color: var(--font-color);
+
+  width: 60px;
+  height: 30px;
+  border-radius: 20px;
+  padding: 0 5px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  transition: background-color 1s;
 }
 
-.navbar-list {
-  font-size: 2rem;
+.switcher div {
+  display: flex;
+  align-items: center;
 }
 
-.navbar-list li:is(:hover, :focus) {
-  color: var(--green);
+.switcher ion-icon {
+  font-size: 20px;
+  color: var(--background-primary);
 }
 
-.navbar-link:hover {
-  opacity: 0.6;
+.switcher button {
+  background-color: var(--background-primary);
+  width: 20px;
+  height: 20px;
+  border-radius: 15px;
+  border: none;
+
+  position: absolute;
+
+  transition: margin 1s;
+  cursor: pointer;
+}
+
+.light {
+  margin-left: 30px;
 }
 
 
-@media (min-width: 768px) {
 
-  .nav-toggle-btn {
+
+
+@media screen and (min-width: 768px) {
+
+  .menu-icon {
     display: none;
   }
 
-  .header, .header.nav-active {
-    height: unset;
+  header > .container > div {
+    flex-direction: row;
   }
 
-  .header .active {
-    background-color: red;
+  nav {
+    display: block;
   }
 
-  .navbar {
-    all: unset;
+  nav ul {
+    flex-direction: row;
+    gap: 20px
   }
 
-  .navbar-list {
-    display: flex;
-    align-items: center;
-    gap: 30px;
+  nav ul li {
+    border: none;
   }
-  
+
 }
