--- a/assets/css/reused.css
+++ b/assets/css/reused.css
@@ -5,20 +5,43 @@
   padding: 0 20px;
 }
 
-.btn {
-  background: var(--color-secondary);
-  color: var(--font-color);
+.btn, .btn2, .btn-icon {
+  color: #fff;
   max-width: max-content;
-  padding: 10px 40px;
-  font-size: 1em;
-  border-radius: 50px;
+  padding: 10px 16px;
+  height: 36px;
+  min-width: 64px;
+  font-size: 14px;
+  border-radius: 8px;
   border: none;
+  text-transform: uppercase;
 }
 
-.btn:hover {
+.btn {
+  background: var(--color-secondary);
+}
+
+.btn2 {
+  background: none;
+  color: var(--color);
+  padding: 10px 0;
+  margin: 30px 0;
+}
+
+.btn-icon {
+  background: var(--color-secondary);
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  padding: 10px 16px 10px 12px;
+}
+
+.btn:hover, .btn2:hover {
   transition: 0.3s;
   opacity: 0.6;
 }
+
 
 .section {
   padding: var(--section-padding) 0;
@@ -30,6 +53,10 @@
 
 .section-subtitle {
   color: var(--color-secondary);
+}
+
+.section-subtitle, .section-title {
+  text-align: center;
 }
 
 ion-icon {
