--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,8 +1,32 @@
 
 .about .container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .about-banner img {
-  height: 500px;
+  width: 250px;
+}
+
+
+
+
+@media screen and (min-width: 768px) {
+
+  .about-banner img {
+    width: 300px;
+  }
+
+  .about .container {
+    flex-direction: row;
+    gap: 50px;
+  }
+
+}
+
+@media screen and (min-width: 1024px) {
+  .about-banner img {
+    width: 500px;
+  }
 }
