--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -8,8 +8,6 @@
   --color: #f15a94;
   --color-secondary: #f15a94;
   --font-color: #e3e3e3;
-
-  --section-padding: 60px;
 }
 
 /* reset */
@@ -37,7 +35,7 @@ a {
 
 h2, h3 {
   color: var(--font-color);
-  padding-bottom: 20px;
+  padding-bottom: 2em;
   font-weight: 400;
 }
 
@@ -60,7 +58,7 @@ html {
 body {
   background: var(--background-primary);
   color: var(--font-color);
-  font-size: 1.2rem;
+  font-size: 12px;
   line-height: 1.8;
   overflow-x: hidden;
 }
@@ -69,7 +67,7 @@ body {
 @media (min-width: 425px) {
 
   body {
-    font-size: 1.6rem;
+    font-size: 16px;
   }
 
 }
