--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -8,6 +8,8 @@
   background-color: var(--background-secondary);
   padding: 50px 5px;
   border-radius: 20px;
+
+  box-shadow: 2px 2px 2px 1px var(--font-color);
 }
 
 .contact-card h2 {
