--- a/assets/css/reused.css
+++ b/assets/css/reused.css
@@ -11,7 +11,7 @@
   padding: 10px 16px;
   height: 36px;
   min-width: 64px;
-  font-size: 14px;
+  font-size: 0.8em;
   border-radius: 8px;
   border: none;
   text-transform: uppercase;
@@ -37,14 +37,14 @@
   padding: 10px 16px 10px 12px;
 }
 
-.btn:hover, .btn2:hover {
+.btn:hover, .btn2:hover, .btn-icon:hover {
   transition: 0.3s;
   opacity: 0.6;
 }
 
 
 .section {
-  padding: var(--section-padding) 0;
+  padding: 50px 0;
   min-height: 100vh;
   display: flex;
   align-items: center;
