Change format of button

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -9,7 +9,7 @@
   padding: 50px 5px;
   border-radius: 20px;
 
-  box-shadow: 2px 2px 2px 1px var(--font-color);
+  box-shadow: 0 0 3px 1px var(--font-color);
 }
 
 .contact-card h2 {
