Add tag a to portfolio to github

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,9 @@
+.section.portfolio {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
 .portfolio-list {
   display: flex;
   flex-direction: column;
