--- a/css/contact.css
+++ b/css/contact.css
@@ -23,34 +23,12 @@
   text-align: center;
 }
 
-.contact-form {
-  padding-bottom: 50px;
+.contact-card .wrapper div {
+  margin-bottom: 32px;
 }
 
-.contact-input {
-  background-color: var(--background-primary);
-  color: var(--font-color);
-  border-radius: 8px;
-  padding: 15px 25px;
-  font-size: 1.5rem;
-  margin-bottom: 15px;
-  border: 2px solid var(--font-color);
-}
-
-.contact-input::placeholder {
-  color: inherit; 
-}
-
-textarea.contact-input {
-  resize: vertical;
-  min-height: 100px;
-  height: 180px;
-  max-height: 300px;
-}
-
-.btn-submit {
-  max-width: 100%;
-  width: 100%;
+.contact-card .wrapper p {
+  text-align: center;
 }
 
 .contact-item {
@@ -60,8 +38,6 @@ textarea.contact-input {
   font-size: 1.6rem;
   text-align: center;
 }
-
-.contact-item:not(:last-child) { margin-block-end: 20px; }
 
 .contact-item-title {
   font-family: var(--ff-barlow);
@@ -86,8 +62,23 @@ textarea.contact-input {
     font-size: 2.5rem;
   }
 
+  .wrapper {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .contact-card .wrapper > div {
+    margin-bottom: 0;
+    width: 40%;
+  }
+
+  .contact-card .wrapper p {
+    text-align: left;
+  }
+
   .contact-item {
     flex-direction: row;
+    align-items: center;
     gap: 20px;
     text-align: left;
   }
@@ -99,19 +90,6 @@ textarea.contact-input {
 
   .contact-card h2 {
     font-size: 3rem;
-  }
-
-  .contact .wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 80px;
-  }
-
-  .wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 10px;
   }
 
   .contact-form {
