--- a/css/style.css
+++ b/css/style.css
@@ -381,7 +381,7 @@ header .btn2:hover {
 .timeline-container .divider {
   background-color: var(--color);
   height: 100%;
-  width: 10px;
+  width: 5px;
   position: relative;
   margin: 0 16px
 }
@@ -426,10 +426,10 @@ header .btn2:hover {
 }
 
 .material-symbols-rounded {
-  font-size: 4rem;
+  font-size: 2rem;
   background-color: var(--color);
   border-radius: 50%;
-  padding: 10px;
+  padding: 8px;
 }
 
 .timeline-container:nth-child(odd) .icon .material-symbols-rounded {
@@ -620,6 +620,10 @@ footer {
 
   /* About */
 
+  .timeline-container .divider {
+    width: 10px;
+  }
+
   .timeline-container .divider::before {
     display: none;
   }
@@ -700,7 +704,7 @@ footer {
   }
 
   .timeline-container .divider {
-    height: 20px;
+    height: 16px;
     width: 100%;
     margin: 0;
   }
@@ -727,6 +731,11 @@ footer {
   .timeline-container:nth-child(odd) .icon::before {
     top: 0;
     background-color: var(--color-secondary);
+  }
+
+  .material-symbols-rounded {
+    font-size: 4rem;
+    padding: 16px;
   }
 
 
