adicionando link do deploy

--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,6 @@ header .btn2:hover {
   text-align: center;
 }
 
-
 .timeline-container .content {
   display: flex;
   flex-direction: column;
@@ -425,7 +424,7 @@ header .btn2:hover {
   position: relative;
 }
 
-.material-symbols-rounded {
+.timeline-container .icon .material-symbols-rounded {
   font-size: 2rem;
   background-color: var(--color);
   border-radius: 50%;
@@ -462,11 +461,6 @@ header .btn2:hover {
   box-shadow: 8px 8px 8px var(--border-color);
 }
 
-.project-card:hover {
-  transform: scale(1.01);
-  transition: .3s;
-}
-
 .card-img {
   background-size: cover;
   width: 100%;
@@ -481,13 +475,34 @@ header .btn2:hover {
   padding: 20px;
 }
 
+.card-content .info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.card-content .info div {
+  display: flex;
+  gap: 5px;
+}
+
 .project-subtitle {
  font-size: 0.8em;
 }
 
+.card-content .info .material-symbols-rounded, .card-content .info ion-icon {
+  font-size: 2rem;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color);
+  padding: 5px;
+  border-radius: 50%;
+}
 
 .project-topics {
-  margin-top: 10px;
   text-align: right;
   font-size: 0.7em;
 
@@ -733,7 +748,7 @@ footer {
     background-color: var(--color-secondary);
   }
 
-  .material-symbols-rounded {
+  .timeline-container .icon .material-symbols-rounded {
     font-size: 4rem;
     padding: 16px;
   }
