Add flex-wrap to project-topics

--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,7 @@ header .btn2:hover {
   gap: 5px;
   align-items: center;
   justify-content: flex-end;
+  flex-wrap: wrap;
 }
 
 .project-topics li {
